--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
+    <nav class="d-flex justify-content-between py-3 px-5">
+      <%= link_to "Home", "/" %>
+      <%= link_to "New List", new_list_path %>
+    </nav>
     <%= yield %>
   </body>
 </html>
