--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-5">
   <h1 class="text-center">Update List</h1>
 
   <%= render "form", list: @list %>
