--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,5 +1,8 @@
-<div class="container">
+<header class="mb-5">
   <h1>All the lists</h1>
+</header>
+
+<div class="container">
 
   <ul>
     <% @lists.each do |list| %>
@@ -8,6 +11,4 @@
       </li>
     <% end %>
   </ul>
-
-  <%= link_to "New Lists found", new_list_path, class: "btn btn-primary" %>
 </div>
