--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,4 +1,4 @@
-<div class="form-content">
+<div class="container mt-5">
   <%= simple_form_for([@list, @bookmark]) do |f| %>
     <%= f.association :movie %>
     <%= f.input :comment %>
