--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 header {
-  background-image: url('https://source.unsplash.com/random');
+  background-image: url('cinema.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
