--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -3,12 +3,21 @@
 </header>
 
 <div class="container">
-
-  <ul>
-    <% @lists.each do |list| %>
-      <li>
-        <%= link_to list.name, list_path(list) %>
-      </li>
-    <% end %>
-  </ul>
+  <div class="container py-5">
+    <div class="d-flex align-items-center justify-content-between mb-3">
+      <h3 class="mb-0">My Lists</h3>
+      <%= link_to 'Create a movie list', new_list_path, class: 'btn btn-primary' %>
+    </div>
+    <div class="row">
+      <% @lists.each do |list| %>
+        <div class="co-12 colsm-6 col-md-4 mb-3">
+          <%= link_to list_path(list) do %>
+            <div class="card-category">
+              <%= list.name %>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
+  </div>
 </div>
