--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -8,7 +8,7 @@
 }
 
 .card-category {
-  background-image: url('list_background.jpeg');
+  background-image: url('https://source.unsplash.com/user/imnoom');
   background-size: cover;
   background-position: center;
   height: 180px;
