update styles, add image upload

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -18,7 +18,9 @@ nav {
 
 a {
   text-decoration: none;
+  opacity: .8;
   &:hover {
     text-decoration: none !important;
+    opacity: 1;
   }
 }
