--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <%= link_to "/" do %>
         <%= image_tag "logo.png", alt: "Movies", width: 105, height: 45 %>
       <% end %>
-      <%= link_to "➕ New List", new_list_path %>
+      <%= link_to "➕ New List", new_list_path, class: 'pt-2' %>
     </nav>
     <%= yield %>
   </body>
