--- a/app/assets/stylesheets/lists.scss
+++ b/app/assets/stylesheets/lists.scss
@@ -2,13 +2,13 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 header {
-  background-image: url('https://source.unsplash.com/user/felixmooneeram');
+  background-image: url('https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2850&q=80');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   color: aliceblue;
   text-shadow: 1px 1px 2px pink;
-  height: 500px;
+  height: 600px;
   width: 100%;
   display: flex;
   align-items: center;
