--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,5 +1,6 @@
 <header class="mb-5">
-  <h1>All the lists</h1>
+  <h1 class="ml-5">All the lists</h1>
+  <p>get some pop-corns</p>
 </header>
 
 <div class="container">
